# adversarial-validation

./: .coveragerc  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
advertion/: __init__.py  core.py  public.py  validate.py  version.py
docs/: adversarial-features.md  api.md  changelog.md  contributing.md  documentation.md  index.md  installation.md  license.md  requirements.txt
tests/: test_public.py  test_validate.py
