[tool.poetry]
name = "advertion"
version = "0.1.0"
description = "A tiny framework to perform adversarial validation of your training and test data."
authors = ["Ilias Antonopoulos <ilias.antonopoulos@yahoo.gr>"]
license = "Apache License 2.0"
readme = "README.md"
homepage = "https://pypi.org/project/advertion"
repository = "https://github.com/ilias-ant/adversarial-validation"
keywords = ["adversarial-validation", "data-drift", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ilias-ant/adversarial-validation/issues"

[tool.poetry.dependencies]
python = ">=3.8.6,<3.12"

scikit-learn = "~1.3.0"
pandas = "~2.0.3"
pydantic = "~2.0.3"
scipy = "~1.10.1"   # scipy v1.11+ requires Python <3.13,>=3.9, but we need for now Python 3.8 for readthedocs
xgboost = "~1.7.6"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.0"
bandit = "^1.7.5"
black = "^23.3.0"
isort = "^5.12.0"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.18"
mkdocstrings = {version = "^0.20.0", extras = ["python"]}
notebook = "^6.5.4"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | \.test_coverage
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]
skips = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
